# invenio-global-search

./: CHANGES.rst  README.md  README.rst  pyproject.toml  run-tests.sh  setup.cfg
.github/workflows/: tests.yml
invenio_global_search/: __init__.py  cli.py  components.py  config.py  ext.py  oai.py  serializers.py
invenio_global_search/serializers/: __init__.py  base.py
invenio_global_search/serializers/lom/: schema.py  serializer.py
invenio_global_search/serializers/marc21/: schema.py  serializer.py
invenio_global_search/serializers/rdm/: schema.py  serializer.py
