# -*- coding: utf-8 -*-
#
# Copyright (C) 2023-2025 Graz University of Technology.
#
# invenio-global-search is free software; you can redistribute it and/or modify
# it under the terms of the MIT License; see LICENSE file for more details.

[build-system]
requires = ["setuptools", "wheel", "babel>2.8"]
build-backend = "setuptools.build_meta"

[tool.ruff]
exclude = ["docs"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D203", "D211", "D212", "D213",
  "E501",
  "FA102",
  "PLR0913",
  "RUF022",
  "TC001", "TC002", "TC003",
  "TID252",
  "UP009",
]

[tool.mypy]
ignore_missing_imports = true

[tool.ty.src]
root = "invenio_global_search"

[tool.ty.rules]
unresolved-import = "ignore"
invalid-argument-type = "ignore" # false errors, inheritance not working yet
unused-ignore-comment = "error"
